[project]
name = "aclsum"
version = "0.1.2"
description = "ACLSum: A New Dataset for Aspect-based Summarization of Scientific Publications"
authors = [
    {name = "sobamchan", email = "oh.sore.sore.soutarou@gmail.com"},
]
dependencies = [
    "sienna>=0.2.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "neovim>=0.3.1",
    "black>=24.2.0",
    "isort>=5.13.2",
    "pyright>=1.1.351",
    "null>=0.6.1",
    "ipython>=8.22.1",
]
